# micrograd-from-scratch

./: README.md  pyproject.toml
notebooks/: micrograd_notebook.ipynb  mlp_implementation.ipynb  pytorch_implementation.ipynb  tanh_breakup.ipynb
src/micrograd/: engine.py  nn.py
src/test/: test.py
