[project]
name = "micrograd-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
